@@ -12,14 +12,16 @@ if MAINTAINER_MODE
 export ACLOCAL AUTOCONF AUTOHEADER AUTOM4TE AUTOMAKE
 endif
 
-if OVERRIDE_MACOSX_DEPLOYMENT_TARGET
-# This requires GNU make, but apparently that's the default on OS X.
-export MACOSX_DEPLOYMENT_TARGET=@OVERRIDE_MACOSX_DEPLOYMENT_TARGET@
-
+if NEED_INTREE_DYLD
 # This is a hack to enable tests in an SVN build (or build with similar layout)
 # on Mac OS X to find the uninstalled xapian library. See
 # http://trac.xapian.org/ticket/322
-export DYLD_LIBRARY_PATH="$(abs_builddir)/../../xapian-core/.libs"
+export DYLD_LIBRARY_PATH=$(abs_builddir)/../../xapian-core/.libs
+endif
+
+if OVERRIDE_MACOSX_DEPLOYMENT_TARGET
+# This requires GNU make, but apparently that's the default on OS X.
+export MACOSX_DEPLOYMENT_TARGET=@OVERRIDE_MACOSX_DEPLOYMENT_TARGET@
 endif
 
 # Define separately to allow overriding easily with: make SWIG_WERROR=
